feat: site designation exchange
